objects/Accelerator__c.object
<CustomObject>
	<description>used by comp crediting</description>
	<fields>
		<fullName>Cap__c</fullName>
		<label>Cap</label>
		<precision>17</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>MCR__c</fullName>
		<label>MCR</label>
		<precision>17</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Quota_Max__c</fullName>
		<label>Quota Max</label>
		<precision>18</precision>
		<scale>8</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Quota_Min__c</fullName>
		<label>Quota Min</label>
		<precision>18</precision>
		<scale>8</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>X1st_Accelerator_Notes__c</fullName>
		<label>1st Accelerator Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>X1st_Over_Achievement_Accelerators__c</fullName>
		<label>1st Achievement Accelerators</label>
		<precision>14</precision>
		<scale>4</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>X1st_Over_achievement_Gate__c</fullName>
		<label>1st Achievement Gate</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>X2nd_Accelerator_Notes__c</fullName>
		<label>2nd Accelerator Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>X2nd_Over_Achievement_Accelerators__c</fullName>
		<label>2nd Achievement Accelerators</label>
		<precision>14</precision>
		<scale>4</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>X2nd_Over_achievement_Gate__c</fullName>
		<label>2nd Achievement Gate</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>X3rd_Accelerator_Notes__c</fullName>
		<label>3rd Accelerator Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>X3rd_Over_Achievement_Accelerators__c</fullName>
		<label>3rd Achievement Accelerators</label>
		<precision>14</precision>
		<scale>4</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>X3rd_Over_achievement_Gate__c</fullName>
		<label>3rd Achievement Gate</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>X4th_Accelerator_Notes__c</fullName>
		<label>4th Accelerator Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>X4th_Achievement_Accelerators__c</fullName>
		<label>4th Achievement Accelerators</label>
		<precision>14</precision>
		<scale>4</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>X4th_Achievement_Gate__c</fullName>
		<label>4th Achievement Gate</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>X5th_Accelerator_Notes__c</fullName>
		<label>5th Accelerator Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>X5th_Achievement_Accelerators__c</fullName>
		<label>5th Achievement Accelerators</label>
		<precision>14</precision>
		<scale>4</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>X5th_Achievement_Gate__c</fullName>
		<label>5th Achievement Gate</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>X6th_Accelerator_Notes__c</fullName>
		<label>6th Accelerator Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>X6th_Achievement_Accelerators__c</fullName>
		<label>6th Achievement Accelerators</label>
		<precision>14</precision>
		<scale>4</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>X6th_Achievement_Gate__c</fullName>
		<label>6th Achievement Gate</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<label>Accelerator</label>
	<listViews>
		<fullName>All</fullName>
		<columns>NAME</columns>
		<columns>OBJECT_ID</columns>
		<columns>Quota_Min__c</columns>
		<columns>Quota_Max__c</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>NAME</field>
			<operation>contains</operation>
			<value>&gt;5Mil</value>
		</filters>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Accelerator Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Accelerators</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>